--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-mongo.url = ${mongodb.connectionString}
-mongo.database = ${mongodb.databaseName}
-telegram.lanxat.token = ${telegram.bots.api.lanxat.token}
+mongo.url = ${MONGO_URL}
+mongo.database = ${MONGO_DATABASE}
+telegram.lanxat.token = ${LANXAT_BOT_TOKEN}
 
 
 
