Improve usability. Message is finished with punctuation mark. Also a help button and help instructions.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 mongo.url = ${MONGO_URL}
 mongo.database = ${MONGO_DATABASE}
+telegram.lanxat.name = ${LANXAT_BOT_NAME}
 telegram.lanxat.token = ${LANXAT_BOT_TOKEN}
 
 
