--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,4 @@
-mongo.url = ${MONGO_URL}
-mongo.database = ${MONGO_DATABASE}
+mongo.url = ${LANXAT_BOT_MONGO_URL}
+mongo.database = ${LANXAT_BOT_MONGO_DATABASE}
 telegram.lanxat.name = ${LANXAT_BOT_NAME}
 telegram.lanxat.token = ${LANXAT_BOT_TOKEN}
-
-
-
